--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h2>Get In Touch</h2>
         <h3>I love programming and development.</h3>
         <p>Do you have similiar choice..!! That's Great. Let's talk about it. </p>
-        <a href="mailto:amansahu112@email.com" class="btn">CONTACT ME</a>
+        <a href="mailto:amansahu112@gmail.com" class="btn">CONTACT ME</a>
       </div>
     </div>
 
